# diff-checker

./: .pre-commit-config.yaml  README.md  pyproject.toml
diff_checker/: main.py
